# Lumina-Editor

./: .dockerignore  .gitignore  App.tsx  Dockerfile  README.md  index.css  index.html  index.tsx  metadata.json  nginx.conf  package-lock.json  package.json  types.ts  vite.config.ts
.github/workflows/: release.yml
components/: ConfigPanel.tsx  ConfirmModal.tsx  FeedbackModal.tsx  FileUpload.tsx  GlossarySidebar.tsx  Header.tsx  ScannerView.tsx  SessionSelector.tsx  TranslationView.tsx  UsernamePrompt.tsx
lumina-analyzer/: index.html
services/: feedbackService.ts  geminiService.ts  ragService.ts  scanService.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
utils/: consoleCapture.ts  luminaApi.ts  models.ts  sessionManager.ts  storage.ts  textProcessing.ts  username.ts
workflows/: release.yaml
