[package]
name = "lumina-book-translator"
version = "0.1.0"
description = "Lumina Book Translator"
authors = ["you"]
edition = "2021"
build = "build.rs"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = "2"
