[package]
name = "lumina-editor"
version = "0.1.0"
description = "Lumina Editor - Narzędzie dla redaktorów"
authors = ["you"]
edition = "2021"
build = "build.rs"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
